[gd_scene load_steps=2 format=2]

[ext_resource path="res://MyTeam/ListPlayerMyTeam.gd" type="Script" id=1]

[node name="MyteamPlayerList" type="Control"]
margin_right = 1240.0
margin_bottom = 250.0
rect_min_size = Vector2( 1240, 250 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="HBoxContainer" parent="."]
margin_right = 1240.0
margin_bottom = 250.0
rect_min_size = Vector2( 1240, 250 )
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="container"]
modulate = Color( 0.254902, 0.117647, 0.117647, 0 )
margin_right = 4.0
margin_bottom = 250.0

[node name="col1" type="VBoxContainer" parent="container"]
margin_left = 8.0
margin_right = 418.0
margin_bottom = 250.0
size_flags_horizontal = 3
alignment = 1

[node name="TitleContainer" type="HBoxContainer" parent="container/col1"]
margin_right = 410.0
margin_bottom = 14.0
alignment = 1

[node name="Label" type="Label" parent="container/col1/TitleContainer"]
margin_left = 172.0
margin_right = 238.0
margin_bottom = 14.0
text = "DEFENDER"
align = 1
valign = 1

[node name="GkContainer" type="HBoxContainer" parent="container/col1"]
margin_top = 18.0
margin_right = 410.0
margin_bottom = 73.0
rect_min_size = Vector2( 410, 0 )
size_flags_vertical = 3
alignment = 1

[node name="Container" type="VBoxContainer" parent="container/col1/GkContainer"]
margin_right = 410.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GkLbl" type="Label" parent="container/col1/GkContainer/Container"]
margin_right = 410.0
margin_bottom = 14.0
text = "GK"

[node name="Gkdropdown" type="OptionButton" parent="container/col1/GkContainer/Container"]
margin_top = 18.0
margin_right = 410.0
margin_bottom = 38.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LbContainer" type="HBoxContainer" parent="container/col1"]
margin_top = 77.0
margin_right = 410.0
margin_bottom = 132.0
rect_min_size = Vector2( 410, 0 )
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="container/col1/LbContainer"]
margin_right = 410.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LbLbl" type="Label" parent="container/col1/LbContainer/Container"]
margin_right = 410.0
margin_bottom = 14.0
text = "LB"

[node name="Lbdropdown" type="OptionButton" parent="container/col1/LbContainer/Container"]
margin_top = 18.0
margin_right = 410.0
margin_bottom = 38.0

[node name="RbContainer" type="HBoxContainer" parent="container/col1"]
margin_top = 136.0
margin_right = 410.0
margin_bottom = 191.0
rect_min_size = Vector2( 410, 0 )
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="container/col1/RbContainer"]
margin_right = 410.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RbLbl" type="Label" parent="container/col1/RbContainer/Container"]
margin_right = 410.0
margin_bottom = 14.0
text = "RB"

[node name="Rbdropdown" type="OptionButton" parent="container/col1/RbContainer/Container"]
margin_top = 18.0
margin_right = 410.0
margin_bottom = 38.0

[node name="CbContainer" type="HBoxContainer" parent="container/col1"]
margin_top = 195.0
margin_right = 410.0
margin_bottom = 250.0
rect_min_size = Vector2( 410, 0 )
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="container/col1/CbContainer"]
margin_right = 410.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CbLbl" type="Label" parent="container/col1/CbContainer/Container"]
margin_right = 410.0
margin_bottom = 14.0
text = "CB"

[node name="Cbdropdown" type="OptionButton" parent="container/col1/CbContainer/Container"]
margin_top = 18.0
margin_right = 410.0
margin_bottom = 38.0

[node name="VSeparator2" type="VSeparator" parent="container"]
modulate = Color( 0.282353, 0.203922, 0.203922, 0 )
margin_left = 422.0
margin_right = 426.0
margin_bottom = 250.0

[node name="col2" type="VBoxContainer" parent="container"]
margin_left = 430.0
margin_right = 825.0
margin_bottom = 250.0
size_flags_horizontal = 3

[node name="TitleContainer" type="HBoxContainer" parent="container/col2"]
margin_right = 395.0
margin_bottom = 14.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="container/col2/TitleContainer"]
margin_left = 174.0
margin_right = 221.0
margin_bottom = 14.0
text = "CENTER"

[node name="McContainer" type="HBoxContainer" parent="container/col2"]
margin_top = 18.0
margin_right = 395.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="container/col2/McContainer"]
margin_right = 395.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="McLbl" type="Label" parent="container/col2/McContainer/Container"]
margin_right = 395.0
margin_bottom = 14.0
text = "MC"

[node name="Mcdropdown" type="OptionButton" parent="container/col2/McContainer/Container"]
margin_top = 18.0
margin_right = 395.0
margin_bottom = 38.0

[node name="LmContainer" type="HBoxContainer" parent="container/col2"]
margin_top = 77.0
margin_right = 395.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="container/col2/LmContainer"]
margin_right = 395.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="LmLbl" type="Label" parent="container/col2/LmContainer/Container"]
margin_right = 395.0
margin_bottom = 14.0
text = "LM"

[node name="Lmdropdown" type="OptionButton" parent="container/col2/LmContainer/Container"]
margin_top = 18.0
margin_right = 395.0
margin_bottom = 38.0

[node name="RmContainer" type="HBoxContainer" parent="container/col2"]
margin_top = 136.0
margin_right = 395.0
margin_bottom = 191.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="container/col2/RmContainer"]
margin_right = 395.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="RmLbl" type="Label" parent="container/col2/RmContainer/Container"]
margin_right = 395.0
margin_bottom = 14.0
text = "RM"

[node name="Rmdropdown" type="OptionButton" parent="container/col2/RmContainer/Container"]
margin_top = 18.0
margin_right = 395.0
margin_bottom = 38.0

[node name="CamContainer" type="HBoxContainer" parent="container/col2"]
margin_top = 195.0
margin_right = 395.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="container/col2/CamContainer"]
margin_right = 395.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="CamLbl" type="Label" parent="container/col2/CamContainer/Container"]
margin_right = 395.0
margin_bottom = 14.0
text = "CAM"

[node name="Camdropdown" type="OptionButton" parent="container/col2/CamContainer/Container"]
margin_top = 18.0
margin_right = 395.0
margin_bottom = 38.0

[node name="VSeparator3" type="VSeparator" parent="container"]
modulate = Color( 0.282353, 0.203922, 0.203922, 0 )
margin_left = 829.0
margin_right = 833.0
margin_bottom = 250.0

[node name="col3" type="VBoxContainer" parent="container"]
margin_left = 837.0
margin_right = 1232.0
margin_bottom = 250.0
size_flags_horizontal = 3

[node name="TitleContainer" type="HBoxContainer" parent="container/col3"]
margin_right = 395.0
margin_bottom = 14.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="container/col3/TitleContainer"]
margin_left = 166.0
margin_right = 229.0
margin_bottom = 14.0
text = "ATTACKER"

[node name="LwContainer" type="HBoxContainer" parent="container/col3"]
margin_top = 18.0
margin_right = 395.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="container/col3/LwContainer"]
margin_right = 395.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="LwLbl" type="Label" parent="container/col3/LwContainer/Container"]
margin_right = 395.0
margin_bottom = 14.0
text = "LW"

[node name="Lwdropdown" type="OptionButton" parent="container/col3/LwContainer/Container"]
margin_top = 18.0
margin_right = 395.0
margin_bottom = 38.0

[node name="RwContainer" type="HBoxContainer" parent="container/col3"]
margin_top = 77.0
margin_right = 395.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="container/col3/RwContainer"]
margin_right = 395.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="RwLbl" type="Label" parent="container/col3/RwContainer/Container"]
margin_right = 395.0
margin_bottom = 14.0
text = "RW"

[node name="Rwdropdown" type="OptionButton" parent="container/col3/RwContainer/Container"]
margin_top = 18.0
margin_right = 395.0
margin_bottom = 38.0

[node name="StContainer" type="HBoxContainer" parent="container/col3"]
margin_top = 136.0
margin_right = 395.0
margin_bottom = 191.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="container/col3/StContainer"]
margin_right = 395.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="StLbl" type="Label" parent="container/col3/StContainer/Container"]
margin_right = 395.0
margin_bottom = 14.0
text = "ST"

[node name="Stdropdown" type="OptionButton" parent="container/col3/StContainer/Container"]
margin_top = 18.0
margin_right = 395.0
margin_bottom = 38.0

[node name="EmptyContainer" type="HBoxContainer" parent="container/col3"]
margin_top = 195.0
margin_right = 395.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator4" type="VSeparator" parent="container"]
modulate = Color( 0.541176, 0.431373, 0.431373, 0 )
margin_left = 1236.0
margin_right = 1240.0
margin_bottom = 250.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
